--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,6 +2,12 @@
   max-width: 1200px;
   margin: 0 auto;
   text-align: center;
+  /* [MB] tentando adicionar a imagem de fundo */
+  background-image: url('../backgroun input/photorealistic-colorful-smoke.jpg');
+  background-size: cover; 
+  background-position: center; 
+  background-repeat: no-repeat; 
+  position: relative; 
 }
 
 header {
@@ -12,6 +18,8 @@ header {
 
 h1 {
   font-size: 3rem;
+  margin-left: 0; /* [MB] tentando deixar o titulo na esquerda */
+  text-align: left; /* [MB] tentando deixar o titulo na esquerda */
   margin-bottom: 20px;
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
 }
@@ -63,4 +71,16 @@ h1 {
 .reset-button:hover {
   background-color: rgba(192, 0, 0, 0.4);
   box-shadow: 0 0 15px rgba(255, 0, 0, 0.3);
+}
+
+/* [MB] tentando adicionar a imagem de fundo */
+.app-container::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6); 
+  z-index: -1;
 }
