--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,8 +1,19 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
 .app-container {
   max-width: 1200px;
   margin: 0 auto;
   text-align: center;
   /* [MB] tentando adicionar a imagem de fundo */
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background-image: url('../backgroun input/photorealistic-colorful-smoke.jpg');
   background-size: cover; 
   background-position: center; 
@@ -81,6 +92,6 @@ h1 {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.6); 
+  background-color: rgba(0, 0, 0, 0.4); 
   z-index: -1;
 }
