--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -6,7 +6,8 @@ html, body {
 }
 
 .app-container {
-  max-width: 1700px;
+  width: 100%;
+  min-height: 100vh;
   margin: 0 auto;
   text-align: center;
   /* [MB] tentando adicionar a imagem de fundo */
